exports[`BookingBreakdown customer transaction data matches snapshot 1`] = `
<div
  className="">
  <div
    className={undefined}>
    <span
      className={undefined}>
      <span>
        Price per night
      </span>
    </span>
    <span
      className={undefined}>
      10
    </span>
  </div>
  <div
    className={undefined}>
    <span
      className={undefined}>
      <span>
        <span
          className={undefined}>
          2017-04-14
        </span>
         – 
        <span
          className={undefined}>
          2017-04-16
        </span>
      </span>
    </span>
    <span
      className={undefined}>
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "&times; 2 nights",
          }
        } />
    </span>
  </div>
  <hr
    className={undefined} />
  <div
    className={undefined}>
    <div
      className={undefined}>
      <span>
        Total price
      </span>
    </div>
    <div
      className={undefined}>
      20
    </div>
  </div>
</div>
`;

exports[`BookingBreakdown pretransaction data matches snapshot 1`] = `
<div
  className="">
  <div
    className={undefined}>
    <span
      className={undefined}>
      <span>
        Price per night
      </span>
    </span>
    <span
      className={undefined}>
      10
    </span>
  </div>
  <div
    className={undefined}>
    <span
      className={undefined}>
      <span>
        <span
          className={undefined}>
          2017-04-14
        </span>
         – 
        <span
          className={undefined}>
          2017-04-16
        </span>
      </span>
    </span>
    <span
      className={undefined}>
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "&times; 2 nights",
          }
        } />
    </span>
  </div>
  <hr
    className={undefined} />
  <div
    className={undefined}>
    <div
      className={undefined}>
      <span>
        Total price
      </span>
    </div>
    <div
      className={undefined}>
      20
    </div>
  </div>
</div>
`;

exports[`BookingBreakdown provider transaction data matches snapshot 1`] = `
<div
  className="">
  <div
    className={undefined}>
    <span
      className={undefined}>
      <span>
        Price per night
      </span>
    </span>
    <span
      className={undefined}>
      10
    </span>
  </div>
  <div
    className={undefined}>
    <span
      className={undefined}>
      <span>
        <span
          className={undefined}>
          2017-04-14
        </span>
         – 
        <span
          className={undefined}>
          2017-04-16
        </span>
      </span>
    </span>
    <span
      className={undefined}>
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": "&times; 2 nights",
          }
        } />
    </span>
  </div>
  <div
    className={undefined}>
    <span
      className={undefined}>
      <span>
        Saunatime fee:
      </span>
    </span>
    <span
      className={undefined}>
      2
    </span>
  </div>
  <hr
    className={undefined} />
  <div
    className={undefined}>
    <div
      className={undefined}>
      <span>
        Total price
      </span>
    </div>
    <div
      className={undefined}>
      18
    </div>
  </div>
</div>
`;
